@@ -17,7 +17,8 @@ private:
 
 public:
     bool is_clicked;
-    tile(bool is_bomb, int value, int x, int y) : is_bomb(is_bomb), value(value), x(x), y(y), is_clicked(false) {}
+    bool is_flagged;
+    tile(bool is_bomb, int value, int x, int y) : is_bomb(is_bomb), value(value), x(x), y(y), is_clicked(false), is_flagged(false) {}
     bool check_if_bomb() { return is_bomb; }
     int get_value() { return value; }
     int get_x() { return x; }
@@ -28,11 +29,21 @@ public:
 class game_board {
 private:
     int num_bombs;
-
+    std::vector<tile *> bombs;
+    int num_flags;
 public:
-    std::vector<tile *> get_tile_neighbors(int x, int y);
-    int check_tile_neighbors(int x, int y);
     tile *board[BOARD_Y][BOARD_X];
+
+    void increment_flags() { num_flags++; }
+    void decrement_flags() { if (num_flags > 0) { num_flags--; } }
+    int get_num_flags() { return num_flags; }
+
+    std::vector<tile *> get_tile_neighbors(int x, int y);
+    int check_tile_neighbors_bombs(int x, int y);
+    int check_tile_neighbors_flags(int x, int y);
+
+    bool have_won();
+    
     game_board(int num_bombs);
     ~game_board();
 };
